Fix responsive bug on Firefox Browser

--- a/src/app/components/system/system-graphic-holder/system-graphic-holder.component.scss
+++ b/src/app/components/system/system-graphic-holder/system-graphic-holder.component.scss
@@ -5,6 +5,7 @@
 :host {
     flex: 1 100%;
     width: 100%;
+    max-width: 100%;
     padding: 20px 20px 30px;
     @include for-tablet-portrait-up {
         padding: 30px 30px 35px;
