--- a/src/app/components/system/system-performance/system-performance.component.scss
+++ b/src/app/components/system/system-performance/system-performance.component.scss
@@ -10,5 +10,6 @@
 :host {
     display: block;
     height: 270px;
-    margin-right: 30px;
+    padding-right: 15px;
 }
+
